[metadata]
description_file = README.md
long_description = Backup utility for libvirt, using latest changed block tracking features

[bdist_rpm]
release = 1
packager = Michael Ablassmeier <abi@grinser.de>
doc_files = README.md Changelog LICENSE

# for rhel9 and above, requires must be passed
# via --requires cmd to skip python3-dataclasses
requires =
    python3-libvirt
    python3-libnbd
    python3-lxml
    python3-tqdm
    python3-lz4
    nbdkit-server
    nbdkit-python-plugin
    python3-dataclasses
    python3-paramiko
    python3-typing-extensions
    python3-colorlog
    qemu-img
    openssh-clients
